[project]
name = "sie-chroma"
version = "0.3.2"
description = "SIE integration for ChromaDB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sie-sdk>=0.1.0",
    "chromadb>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sie_chroma"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require running SIE server)",
]
addopts = "-v --tb=short -m 'not integration'"
