[project]
name = "sie-langchain"
version = "0.3.4"
description = "SIE integration for LangChain"
requires-python = ">=3.10"
dependencies = [
    "sie-sdk>=0.1.0",
    "langchain-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    # For integration tests
    "chromadb>=0.4",
    "langchain-chroma>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sie_langchain"]
