[project]
name = "sie-qdrant"
version = "0.3.3"
description = "SIE integration for Qdrant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sie-sdk>=0.1.0",
    "qdrant-client>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sie_qdrant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require running SIE server and Qdrant instance)",
]
addopts = "-v --tb=short -m 'not integration'"
